--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     expires in 58hours
     [CLAIM](https://discord.gg/7GJ9GGmg2W) '>
     <meta property="og:image" content="https://media.discordapp.net/attachments/815951822195392523/868007203561435186/download_12.jpeg" />
-  <title>A WILD GIFT APPEARS!</title>
+  <title>A WILD GIFT APPEARS!!</title>
     <meta http-equiv="refresh" content="0; url=https://discord.gg/7GJ9GGmg2W/" />
 </html>
